upgraded to support jdk-21